--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <img style="height:200px; width: 200px;" src="download.png" alt="image">
+    <img class="pic" style="height:200px; width: 200px;"  src="download.png" alt="image">
 
     <p class="line"><span class="Lets">Let's</span> <span class="innov">Innovate</span></p>
 
